Switched to java8