@@ -14,7 +14,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>1.8</java.version>
         <jackson.version>2.12.0</jackson.version>
         <objenesis.version>3.1</objenesis.version>
         <lombok.version>1.18.16</lombok.version>
@@ -24,6 +24,7 @@
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.javadoc.plugin.version>3.1.1</maven.javadoc.plugin.version>
+        <gpg.plugin.version>1.6</gpg.plugin.version>
     </properties>
 
     <dependencies>
@@ -69,7 +70,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefile.plugin.version}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+<!--                    <argLine>&#45;&#45;enable-preview</argLine>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -102,6 +103,20 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${gpg.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -127,4 +142,15 @@
             <email>rosca.andrei.1994@gmail.com</email>
         </developer>
     </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
 </project>
